--- a/client/package.json
+++ b/client/package.json
@@ -15,9 +15,15 @@
     },
     "dependencies": {
       "angular": "github:angular/bower-angular@1.5.0-rc.0",
+      "angular-animate": "github:angular/bower-angular-animate@1.5.0-rc.0",
+      "angular-aria": "github:angular/bower-angular-aria@1.5.0-rc.0",
+      "angular-cookies": "github:angular/bower-angular-cookies@1.5.0-rc.0",
       "angular-file-upload": "github:danialfarid/ng-file-upload-bower@^10.1.9",
       "angular-material": "github:angular/bower-material@1.0.1",
       "angular-route": "github:angular/bower-angular-route@1.5.0-rc.0",
+      "angular-translate": "github:angular-translate/bower-angular-translate@^2.8.1",
+      "angular-translate-storage-cookie": "github:angular-translate/bower-angular-translate-storage-cookie@^2.8.1",
+      "angular-translate-storage-local": "github:angular-translate/bower-angular-translate-storage-local@^2.8.1",
       "css": "github:systemjs/plugin-css@^0.1.20",
       "material-design-icons": "github:google/material-design-icons@^2.1.1",
       "moment": "npm:moment@^2.10.6",
