add passwordless server side - still need to handle email when user search once the email is verified

--- a/server/package.json
+++ b/server/package.json
@@ -9,7 +9,9 @@
     "babel-register": "^6.3.13",
     "jwt-simple": "^0.4.0",
     "koa": "^2.0.0-alpha.3",
+    "koa-bodyparser": "^3.0.0",
     "koa-router": "^7.0.0",
-    "moment": "^2.10.6"
+    "moment": "^2.10.6",
+    "validator": "^4.4.0"
   }
 }
