--- a/server/package.json
+++ b/server/package.json
@@ -11,6 +11,7 @@
     "koa": "^2.0.0-alpha.3",
     "koa-bodyparser": "^3.0.0",
     "koa-router": "^7.0.0",
+    "koa-send": "^3.1.0",
     "moment": "^2.10.6",
     "validator": "^4.4.0"
   }
