--- a/server/package.json
+++ b/server/package.json
@@ -7,12 +7,14 @@
     "babel-preset-es2015": "^6.3.13",
     "babel-preset-stage-1": "^6.3.13",
     "babel-register": "^6.3.13",
+    "bs58": "^3.0.0",
     "jwt-simple": "^0.4.0",
     "koa": "^2.0.0-alpha.3",
     "koa-bodyparser": "^3.0.0",
     "koa-router": "^7.0.0",
     "koa-send": "^3.1.0",
     "moment": "^2.10.6",
+    "node-cache": "^3.0.0",
     "validator": "^4.4.0"
   }
 }
