--- a/client/package.json
+++ b/client/package.json
@@ -29,7 +29,7 @@
       "material-design-icons": "github:google/material-design-icons@^2.1.1",
       "moment": "npm:moment@^2.10.6",
       "ngImgCrop": "github:alexk111/ngImgCrop@^0.3.2",
-      "satellizer": "github:sahat/satellizer@^0.13.2"
+      "satellizer": "github:sahat/satellizer@0.13.3"
     },
     "devDependencies": {
       "babel": "npm:babel-core@^5.8.34",
