make sure npm package points to correct server script

--- a/package.json
+++ b/package.json
@@ -3,12 +3,12 @@
   "license": "AGPL",
   "scripts": {
     "postinstall": "cd server && npm i",
-    "start": "cd server && node bin/start.js",
+    "start": "cd server && node main.js",
     "jspm": "cd client && jspm i --yes",
     "local": "npm run postinstall && npm run jspm",
     "sfx": "cd client && npm run sfx"
   },
   "engines": {
-    "node": "^5.0.0"
+    "node": "^5.4.0"
   }
 }
