--- a/server/package.json
+++ b/server/package.json
@@ -13,8 +13,10 @@
     "jwt-simple": "^0.4.0",
     "koa": "^2.0.0-alpha.3",
     "koa-bodyparser": "^3.0.0",
+    "koa-convert": "^1.2.0",
     "koa-router": "^7.0.0",
     "koa-send": "^3.1.0",
+    "koa-static": "^2.0.0",
     "moment": "^2.10.6",
     "node-cache": "^3.0.0",
     "validator": "^4.4.0"
