--- a/client/package.json
+++ b/client/package.json
@@ -3,7 +3,7 @@
   "license": "AGPL",
   "author": "Amit Portnoy <amit.portnoy@gmail.com> (https://github.com/amitport)",
   "scripts": {
-    "sfx": "jspm bundle-sfx index jspm-sfx/main.min.js --minify --skip-source-maps",
+    "sfx": "jspm bundle-sfx index jspm-sfx/main.bundle.js --minify --skip-source-maps",
     "jspm": "jspm"
   },
   "devDependencies": {
