don't run jspm on heroku

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "private": true,
   "license": "AGPL",
   "scripts": {
-    "postinstall": "npm run npmi && npm run jspmi",
+    "postinstall": "npm run npmi",
     "npmi": "cd server && npm i",
     "jspmi": "cd client && npm i && npm run jspm install --yes",
     "start": "cd server && node main.js",
