--- a/server/package.json
+++ b/server/package.json
@@ -3,23 +3,27 @@
   "license": "AGPL",
   "author": "Amit Portnoy <amit.portnoy@gmail.com> (https://github.com/amitport)",
   "dependencies": {
-    "babel-polyfill": "^6.3.14",
-    "babel-preset-es2015": "^6.3.13",
-    "babel-preset-stage-1": "^6.3.13",
-    "babel-register": "^6.3.13",
+    "babel-polyfill": "^6.5.0",
+    "babel-preset-es2015": "^6.5.0",
+    "babel-preset-stage-1": "^6.5.0",
+    "babel-register": "^6.5.1",
     "bs58": "^3.0.0",
     "co-views": "^2.1.0",
-    "ejs": "^2.3.4",
-    "jwt-simple": "^0.4.0",
+    "config": "^1.19.0",
+    "ejs": "^2.4.1",
+    "jwt-simple": "^0.4.1",
     "koa": "^2.0.0-alpha.3",
     "koa-bodyparser": "^3.0.0",
     "koa-convert": "^1.2.0",
     "koa-router": "^7.0.0",
     "koa-send": "^3.1.0",
     "koa-static": "^2.0.0",
-    "moment": "^2.10.6",
-    "node-cache": "^3.0.0",
+    "moment": "^2.11.2",
+    "mongoose": "^4.4.2",
+    "mongoose-validators": "^0.1.0",
+    "node-cache": "^3.1.0",
     "sparkpost": "^1.1.0",
-    "validator": "^4.4.0"
+    "validator": "^4.7.1",
+    "winston": "^2.1.1"
   }
 }
