--- a/server/package.json
+++ b/server/package.json
@@ -20,6 +20,7 @@
     "koa-static": "^2.0.0",
     "moment": "^2.11.2",
     "mongoose": "^4.4.2",
+    "mongoose-beautiful-unique-validation": "^2.0.3",
     "mongoose-validators": "^0.1.0",
     "node-cache": "^3.1.0",
     "sparkpost": "^1.1.0",
