--- a/server/package.json
+++ b/server/package.json
@@ -7,6 +7,8 @@
     "babel-preset-es2015": "^6.5.0",
     "babel-preset-stage-1": "^6.5.0",
     "babel-register": "^6.5.1",
+    "base64-url": "^1.2.1",
+    "bluebird": "^3.3.1",
     "bs58": "^3.0.0",
     "co-views": "^2.1.0",
     "config": "^1.19.0",
@@ -23,6 +25,7 @@
     "mongoose-beautiful-unique-validation": "^2.0.3",
     "mongoose-validators": "^0.1.0",
     "node-cache": "^3.1.0",
+    "request": "^2.69.0",
     "sparkpost": "^1.1.0",
     "validator": "^4.7.1",
     "winston": "^2.1.1"
