--- a/client/package.json
+++ b/client/package.json
@@ -20,7 +20,7 @@
       "angular-cookies": "github:angular/bower-angular-cookies@1.5.0",
       "angular-file-upload": "github:danialfarid/ng-file-upload-bower@11.2.1",
       "angular-material": "github:angular/bower-material@1.0.5",
-      "angular-messages": "github:angular/bower-angular-messages@1.5.0",
+      "angular-messages": "github:angular/bower-angular-messages@^1.5.0",
       "angular-route": "github:angular/bower-angular-route@1.5.0",
       "angular-translate": "github:angular-translate/bower-angular-translate@^2.9.0",
       "angular-translate-storage-cookie": "github:angular-translate/bower-angular-translate-storage-cookie@^2.9.0",
@@ -29,13 +29,25 @@
       "material-design-icons": "github:google/material-design-icons@^2.1.1",
       "moment": "npm:moment@2.11.2",
       "ngImgCrop": "github:alexk111/ngImgCrop@^0.3.2",
-      "satellizer": "github:sahat/satellizer@0.13.4"
+      "satellizer": "github:sahat/satellizer@0.13.4",
+      "text": "github:systemjs/plugin-text@^0.0.4"
     },
     "devDependencies": {
       "babel": "npm:babel-core@5.8.35",
       "babel-runtime": "npm:babel-runtime@5.8.35",
       "clean-css": "npm:clean-css@3.4.9",
       "core-js": "npm:core-js@^1.2.6"
+    },
+    "overrides": {
+      "github:angular/bower-angular-messages@1.5.0": {
+        "shim": {
+          "angular-messages": {
+            "deps": [
+              "angular"
+            ]
+          }
+        }
+      }
     }
   }
 }
