--- a/client/package.json
+++ b/client/package.json
@@ -22,11 +22,11 @@
       "angular-material": "github:angular/bower-material@1.0.5",
       "angular-messages": "github:angular/bower-angular-messages@^1.5.0",
       "angular-route": "github:angular/bower-angular-route@1.5.0",
-      "angular-translate": "github:angular-translate/bower-angular-translate@^2.9.0",
-      "angular-translate-storage-cookie": "github:angular-translate/bower-angular-translate-storage-cookie@^2.9.0",
-      "angular-translate-storage-local": "github:angular-translate/bower-angular-translate-storage-local@^2.9.0",
+      "angular-translate": "github:angular-translate/bower-angular-translate@^2.9.1",
+      "angular-translate-storage-cookie": "github:angular-translate/bower-angular-translate-storage-cookie@^2.9.1",
+      "angular-translate-storage-local": "github:angular-translate/bower-angular-translate-storage-local@^2.9.1",
       "css": "github:systemjs/plugin-css@^0.1.20",
-      "material-design-icons": "github:google/material-design-icons@^2.1.1",
+      "material-design-icons": "github:google/material-design-icons@2.2.0",
       "moment": "npm:moment@2.11.2",
       "ngImgCrop": "github:alexk111/ngImgCrop@^0.3.2",
       "satellizer": "github:sahat/satellizer@0.13.4",
