--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,7 @@
     "babel-polyfill": "^6.5.0",
     "babel-preset-es2015": "^6.5.0",
     "babel-preset-stage-1": "^6.5.0",
-    "babel-register": "^6.5.1",
+    "babel-register": "^6.5.2",
     "base64-url": "^1.2.1",
     "bluebird": "^3.3.1",
     "bs58": "^3.0.0",
@@ -21,13 +21,13 @@
     "koa-send": "^3.1.0",
     "koa-static": "^2.0.0",
     "moment": "^2.11.2",
-    "mongoose": "^4.4.2",
+    "mongoose": "4.4.3",
     "mongoose-beautiful-unique-validation": "^2.0.3",
     "mongoose-validators": "^0.1.0",
     "node-cache": "^3.1.0",
     "request": "^2.69.0",
     "sparkpost": "^1.1.0",
-    "validator": "^4.7.1",
+    "validator": "^4.8.0",
     "winston": "^2.1.1"
   }
 }
